securing-workloads/assets/step3-namespace-level.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: mtls
  namespace: namespace-level
spec:
  mtls:
    mode: STRICT
