securing-workloads/assets/step2-deny-all.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: deny-all
  namespace: mtls-permissive
spec:
  {}
