securing-workloads/assets/step2-secure-mtls-strict.yaml
# TODO: HERE
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: httpbin
  namespace: default
spec:
  action: ALLOW
  rules:
  - from:
    - source:
        namespaces:
        - default
